--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -3,8 +3,22 @@ body {
   font-weight: 400;
 }
 
+::before,
+::after {
+  box-sizing: border-box;
+}
+a {
+  text-decoration: none;
+  /* position: relative; */
+}
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 .gallery {
-  display: grid;
+  display: flex;
   flex-wrap: wrap;
   max-width: 1140px;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -14,23 +28,38 @@ body {
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  padding-bottom: 30px;
 }
 
 .photo-card {
-  display: flex;
-  position: relative;
+  // display: flex;
+  // position: relative;
+  width: calc(25% - 30px);
+  border-radius: 15px;
+  border: medium solid rgb(184, 209, 184);
+  // margin-left: 15px;
+  // margin-right: 15px;
+  margin-top: 30px;
+  border: 1px solid silver;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
 }
 
-// .gallery__image:hover {
-//   transform: scale(1.03);
-// }
+.gallery-image:hover {
+  transform: scale(1.03);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+}
 
-.photo-card > a > img {
-  height: 100%;
+.photo-card img {
   width: 100%;
+  display: block;
+  height: 150px;
   object-fit: cover;
+  object-position: center;
+  border-radius: 15px;
+  border: medium solid rgb(184, 209, 184);
+
   transition: transform var(--animation-duration) var(--timing-function);
 }
 
@@ -46,15 +75,63 @@ body {
 
 .info {
   display: flex;
+  justify-content: space-between;
+  // padding: 20px;
 }
 
-// .info-item {
-// }
+.info-item {
+  //display: flex;
+  text-align: center;
+  font-size: 10px;
+  color: #414141;
+}
+.info-item b {
+  display: block;
+  margin-bottom: 7px;
+}
 
 .load-more {
-  background-color: gray;
+  display: block;
+  margin-top: 40px;
+  width: 250px;
+  height: 50px;
+  line-height: 50px;
+  border-radius: 15px;
+  background-color: #e0efb0;
+  border: medium solid rgb(184, 209, 184);
+  font-size: 16px;
+  text-align: center;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  margin-left: auto;
+  transition: 0.25s;
+  margin-right: auto;
+  margin-bottom: 60px;
 }
 
 .unvisible {
   display: none;
+}
+.photo-card {
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-top: 30px;
+  border: 1px solid silver;
+  width: 100%;
+  @media screen and (min-width: 767px) {
+    width: calc((100% - 15px * 8) / 2);
+  }
+  @media screen and (min-width: 1023px) {
+    width: calc((100% - 5px * 8) / 5);
+  }
+
+  // @media screen and (min-width: 700px) {
+  //   width: 100%;
+  // }
+
+  // @media screen and (min-width: 1200px) {
+  //   width: calc((100% - 15px * 8) / 4);
+  //   margin: 15px;
+  // }
 }
