--- a/src/sass/layout/_form-elem.scss
+++ b/src/sass/layout/_form-elem.scss
@@ -6,30 +6,24 @@
   left: 0;
   width: 100%;
   background-color: #b7f2c0;
-  padding: 20px;
   border: medium solid rgb(184, 209, 184);
 }
+
 .search-input {
-  align-items: center;
-  // position: relative;
-  justify-content: center;
-  margin-right: 15px;
-  width: 40%;
+  display: block;
+  max-width: 100%;
+  width: 100%;
   height: 50px;
   padding: 15px 30px;
   border: medium solid rgb(184, 209, 184);
   border-radius: 15px;
   line-height: 30px;
   font-size: 18px;
-  // color: #414141;
 }
-// .search-input::placeholder {
-//   color: #797979;
-// }
+
 .search-btn {
-  // position: absolute;
   display: block;
-  width: 50px;
+  width: 55px;
   height: 50px;
   cursor: pointer;
   border-radius: 15px;
@@ -37,6 +31,22 @@
   background-color: #e0efb0;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-// .search-btn:hover {
-//   background-color: rgb(156, 198, 208);
-// }
+.search-btn:hover {
+  background-color: rgb(240, 240, 240);
+}
+
+.thumb {
+  position: relative;
+  margin: 10px;
+  border-radius: 15px;
+  overflow: hidden;
+  width: 35%;
+  height: 50px;
+}
+
+.thumb > .search-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+}
