--- a/src/sass/layout/_gallery.scss
+++ b/src/sass/layout/_gallery.scss
@@ -1,19 +1,15 @@
 .gallery {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1140px;
-  grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-auto-rows: 240px;
-  grid-gap: 12px;
-  justify-content: center;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 100px;
+  margin-top: 80px;
   padding-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+  }
 }
 
 .photo-card {
-  // width: calc(25% - 30px);
   border-radius: 15px;
   border: medium solid rgb(184, 209, 184);
   margin-top: 30px;
@@ -79,16 +75,38 @@
 .unvisible {
   display: none;
 }
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 20px;
+  padding-right: 20px;
+
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 700px) {
+    width: 700px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
+}
 .photo-card {
-  margin-left: 15px;
-  margin-right: 15px;
-  margin-top: 30px;
-  border: 1px solid silver;
-  width: 100%;
-  @media screen and (min-width: 767px) {
-    width: calc((100% - 15px * 8) / 2);
+  margin-bottom: 30px;
+
+  @media screen and (min-width: 480px) {
+    margin-right: 30px;
+    flex-basis: calc(100% / 2 - 30px);
   }
-  @media screen and (min-width: 1023px) {
-    width: calc((100% - 5px * 8) / 5);
+  @media screen and (min-width: 700px) {
+    flex-basis: calc(100% / 3 - 30px);
   }
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+  }
+}
+.photo-card:hover {
+  transform: scale(1.09);
 }
